--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "react-on-aws-s3",
   "version": "0.1.0",
+  "author": {
+    "name": "Boca Code"
+  },
+  "contributors": [
+    {
+      "name": "Todd"
+    },
+    {
+      "name": "Jonathan Vegas"
+    }
+  ],
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -8,14 +19,15 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://react-on-aws-s3-javv",
+    "prod": "yarn build && yarn deploy"
   },
   "eslintConfig": {
     "extends": [
